--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF--8" />
+    <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gemini E-Commerce Dashboard</title>
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             colors: {
@@ -18,36 +19,36 @@
               'body': [
                 'Inter', 
                 'ui-sans-serif', 
-                'system-ui', 
-                // other fallback fonts
+                'system-ui',
               ],
               'sans': [
                 'Inter', 
                 'ui-sans-serif', 
-                'system-ui', 
-                // other fallback fonts
+                'system-ui',
               ]
             }
           }
         }
       }
     </script>
-     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <script type="importmap">
 {
   "imports": {
+    "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.8.2",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.18.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.543.0",
-    "recharts": "https://aistudiocdn.com/recharts@^3.2.0"
+    "recharts": "https://aistudiocdn.com/recharts@^3.2.0",
+    "vite": "https://aistudiocdn.com/vite@^7.1.5",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
